--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 <body>
 <div class="page-header">
     <div class="header-top">
-        Логотип
-
+        <div class="header-logo">
+            <img src="img/logo.png" alt="The Great Keksby" width="205" height="55">
+        </div>
         <ul class="main-nav">
-            <li>Магазин</li>
-            <li>Каталог</li>
-            <li>Отзывы</li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Отзывы</a></li>
         </ul>
+        <a class="btn" href="#">Заказать</a>
     </div>
     <div class="promo">
-        Аксессуары для котов<br> Коллекция FW15
+        <a href="#">Аксессуары для котов<br> Коллекция FW15</a>
     </div>
 </div>
 
@@ -42,28 +44,23 @@
 
 <div class="cat-reference">
     <h2>Немного теории</h2>
-
+    <a class="btn" href="#" title="Открыть справочник">Справочник</a>
     <dl>
         <dt>
             Окрас кошек и котов
-            <i>источник: wikipedia</i>
+            <i>источник: <a target="_blank" href="https://ru.wikipedia.org">wikipedia</a></i>
         </dt>
         <dd>
-            Фото 1
-            <p>Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле
-                волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и
-                вызывает различия в окрасе.</p>
+            <img width="100" height="100" src="img/article-1.jpg" alt="Окрас кошек и котов">
+            <p>Окрас шерсти, кожи и глаз кошки обусловлен присутствием в них пигмента меланина. Меланин находится в теле волоса в виде микроскопических гранул, которые различаются по форме, размеру и количеству, что и вызывает различия в окрасе.</p>
         </dd>
-
         <dt>
             Кошкин дом
-            <i>источник: kotmur.spb.ru</i>
+            <i>источник: <a target="_blank" href="http://kotmur.spb.ru">kotmur.spb.ru</a></i>
         </dt>
         <dd>
-            Фото 2
-            <p>Нужен ли кошке Кошкин дом? Свой отдельный, обособленный от пространства городской квартиры Кошкин дом?
-                Да, нужен! Нужен особый Кошкин дом, обустроенный по её вкусу с лесенкой, с когтеточкой, с замкнутым,
-                своим, отдельным уголком в её, кошкином, доме.</p>
+            <img width="100" height="100" src="img/article-2.jpg" alt="Кошкин дом">
+            <p>Нужен ли кошке Кошкин дом? Свой отдельный, обособленный от пространства городской квартиры Кошкин дом? Да, нужен! Нужен особый Кошкин дом, обустроенный по её вкусу с лесенкой, с когтеточкой, с замкнутым, своим, отдельным уголком в её, кошкином, доме.</p>
         </dd>
     </dl>
 </div>
@@ -74,13 +71,11 @@
 
     <div class="reviews-list">
         <blockquote class="review-item">
-            <p>Спасибо Кексу за давно напрашивающуюся идею! Набрал себе очков на все случаи жизни: для чтения и для
-                вечеринки с котанами B-)</p>
+            <p>Спасибо Кексу за давно напрашивающуюся идею! Набрал себе очков на все случаи жизни: для чтения и для вечеринки с котанами B-)</p>
             <cite>Барсик, г. Москва</cite>
         </blockquote>
         <blockquote class="review-item">
-            <p>Я просто не могу без шопинга и теперь не нужно тащить хозяйку в магазин, заказываю все аксессуары на
-                сайте у Кекса онлайн!</p>
+            <p>Я просто не могу без шопинга и теперь не нужно тащить хозяйку в магазин, заказываю все аксессуары на сайте у Кекса онлайн!</p>
             <cite>Мурка, г. Санкт-Петербург</cite>
         </blockquote>
     </div>
@@ -99,7 +94,7 @@
         <div class="catalog-item">
             Фото товара 2
             <h3>Очки «Жалюзи»</h3>
-            <b> 400 р.</b>
+            <b>400 р.</b>
         </div>
         <div class="catalog-item">
             Фото товара 3
@@ -116,26 +111,27 @@
     </div>
 
     <div class="footer-middle">
-        <div class="footer-menu"><h3>Магазин</h3>
+        <div class="footer-menu">
+            <h3>Магазин</h3>
             <ul>
                 <li>Домики</li>
                 <li>Одежда</li>
                 <li>Очки</li>
             </ul>
-
-            </div>
-        <div class="footer-menu"> <h3>Отзывы</h3>
+        </div>
+        <div class="footer-menu">
+            <h3>Отзывы</h3>
             <ul>
                 <li>Показать</li>
                 <li>Оставить</li>
-
             </ul>
-            </div>
-        <div class="footer-menu"><h3>Прайс-лист</h3>
+        </div>
+        <div class="footer-menu">
+            <h3>Прайс-лист</h3>
             <ul>
                 <li>Скачать прайс</li>
             </ul>
-            </div>
+        </div>
     </div>
 
     <div class="footer-bottom">
